// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage component should render correctly 1`] = `
<div
  className="form-wrapper"
>
  <form
    className="form user-form"
  >
    <InputWrapper
      inputId="email"
      inputValue=""
      labelValue="Username/Email:"
      setInput={[Function]}
      type="text"
    />
    <InputWrapper
      inputId="password"
      inputValue=""
      labelValue="Password:"
      setInput={[Function]}
      type="password"
    />
    <div
      className="btn-wrapper"
    >
      <button
        className="user-form__btn"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
      <button
        className="user-form__btn"
        type="button"
      >
        Sign Up
      </button>
    </div>
  </form>
</div>
`;

exports[`LoginPage component wrong password should show error message 1`] = `
<div
  className="form-wrapper"
>
  <form
    className="form user-form"
  >
    <div
      className="error"
    />
    <InputWrapper
      inputId="email"
      inputValue=""
      labelValue="Username/Email:"
      setInput={[Function]}
      type="text"
    />
    <InputWrapper
      inputId="password"
      inputValue=""
      labelValue="Password:"
      setInput={[Function]}
      type="password"
    />
    <div
      className="btn-wrapper"
    >
      <button
        className="user-form__btn"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
      <button
        className="user-form__btn"
        type="button"
      >
        Sign Up
      </button>
    </div>
  </form>
</div>
`;
